; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/arm/extr_machine_routines.c_ml_static_vtop.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/arm/extr_machine_routines.c_ml_static_vtop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@gVirtBase = common dso_local global i64 0, align 8
@gPhysSize = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [40 x i8] c"ml_static_ptovirt(): illegal vaddr: %p\0A\00", align 1
@gPhysBase = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @ml_static_vtop(i64 %0) #0 {
  %2 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %3 = load i64, i64* %2, align 8
  %4 = load i64, i64* @gVirtBase, align 8
  %5 = sub nsw i64 %3, %4
  %6 = load i64, i64* @gPhysSize, align 8
  %7 = icmp sge i64 %5, %6
  br i1 %7, label %8, label %12

8:                                                ; preds = %1
  %9 = load i64, i64* %2, align 8
  %10 = inttoptr i64 %9 to i8*
  %11 = call i32 @panic(i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str, i64 0, i64 0), i8* %10)
  br label %12

12:                                               ; preds = %8, %1
  %13 = load i64, i64* %2, align 8
  %14 = load i64, i64* @gVirtBase, align 8
  %15 = sub nsw i64 %13, %14
  %16 = load i64, i64* @gPhysBase, align 8
  %17 = add nsw i64 %15, %16
  ret i64 %17
}

declare dso_local i32 @panic(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
